improve spot bugs config